mudanças para se adequar ao padrão de codigo